--- a/stylesheet.css
+++ b/stylesheet.css
@@ -665,4 +665,143 @@ color: var(--primary-color);
 
 } 
 
-  
+
+/*Back to Top Button*/
+.backToTop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border: 2px solid #222;
+  border-radius: 4px;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: all 0.3s ease;
+  opacity: 0;
+  pointer-events: none; /* prevent clicking when hidden */
+}
+
+.backToTop.show {
+  opacity: 1;
+  pointer-events: auto; /* clickable when visible */
+}
+
+.backToTop:hover {
+  background: #f2f2f2;
+}
+
+.backToTop .arrow-up,
+.backToTop .material-symbols-outlined {
+  font-size: 22px;
+  color: #111;
+}
+
+
+/*About Us Page*/
+
+.about-wrapper {
+    max-width: 100%;
+    margin: 3rem auto;
+    padding: 1rem 2rem;
+    line-height: 1.7;
+}
+
+
+.crop-box {
+  width: 100%;
+  height: 30rem;       /* visible height */
+  overflow: hidden;    /* hides the rest */
+  position: relative;
+}
+
+.top-crop {
+  width: 100%;
+  transform: translateY(-50%); /* crop 50% from the top */
+}
+
+
+
+.about-text-title{
+    font-size: 1.0rem;
+    font-weight: 600;
+}
+
+
+.about-comp-head{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.about-heading {
+    font-size: 2rem;
+    color: #333;
+    font-weight: 600;
+}
+
+.about-text-1 {
+    width:80%;
+    text-align: center;
+    font-size: 1.0rem;
+    color: #444;
+}
+
+.about-craft-head {
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.col-50 {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2 equal columns */
+  gap: 20px; /* space between columns */
+}
+
+.about-text-2 {
+ 
+    width:100%;
+    text-align: justify;
+    font-size: 1.0rem;
+    color: #444;
+}
+
+  .pict-section img {
+  display: flex;
+  width: 18.75rem;     /* 300px */
+  height: 25rem;       /* 400px */
+  object-fit: cover;
+  border-radius: 0.5rem;  /* 8px */
+  margin-bottom: 2.5rem;  /* 40px */
+  margin-left: 1.875rem;  /* 30px */
+  border: #ffffff 0.3125rem solid; /* 5px */
+}
+
+
+@media (max-width: 768px) {
+
+.col-50 {
+  display: flex;
+  flex-direction: column;
+  gap: 5px; /* space between columns */
+}
+    
+}
+
+ footer{
+
+font-size: small;
+
+ }
+
+ 
