--- a/stylesheet.css
+++ b/stylesheet.css
@@ -710,6 +710,7 @@ color: var(--primary-color);
     margin: 3rem auto;
     padding: 1rem 2rem;
     line-height: 1.7;
+    
 }
 
 
@@ -718,9 +719,11 @@ color: var(--primary-color);
   height: 30rem;       /* visible height */
   overflow: hidden;    /* hides the rest */
   position: relative;
+  margin-bottom: 10px;
+
 }
 
-.top-crop {
+.img {
   width: 100%;
   transform: translateY(-50%); /* crop 50% from the top */
 }
@@ -730,6 +733,7 @@ color: var(--primary-color);
 .about-text-title{
     font-size: 1.0rem;
     font-weight: 600;
+    margin-bottom: 10px;
 }
 
 
@@ -747,6 +751,8 @@ color: var(--primary-color);
 }
 
 .about-text-1 {
+  display: flex;
+  justify-self: center;
     width:80%;
     text-align: center;
     font-size: 1.0rem;
@@ -796,6 +802,21 @@ color: var(--primary-color);
   gap: 5px; /* space between columns */
 }
     
+
+.crop-box {
+  width: 100%;
+  height: 30rem;       /* visible height */
+  overflow: hidden;    /* hides the rest */
+  position: relative;
+
+}
+
+.img {
+  width: 100%;
+  transform: translateY(-50%); /* crop 50% from the top */
+}
+
+
 }
 
  footer{
