worked on adress link in the JS file

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -410,7 +410,7 @@ color: var(--primary-color);
 
     .feature p {
       color: white;
-      font-size: 0.8rem;
+      font-size: 0.9rem;
       font-weight: 700;
       text-shadow: white;  
       
@@ -744,8 +744,8 @@ color: var(--primary-color);
   align-items: center;
   text-align: center;
 }
-.about-heading {
-    font-size: 2rem;
+.about-heading h2{
+    margin-bottom: 1rem;
     color: #333;
     font-weight: 600;
 }
@@ -816,10 +816,134 @@ color: var(--primary-color);
   transform: translateY(-50%); /* crop 50% from the top */
 }
 
+}
+/*Contact Form*/ 
+
+/* WRAPPER */
+.contact-wrapper {
+    display: flex;
+    flex-direction: row;
+    position:relative;
+    width: 100%;
+    padding:20px, 20px;
+    overflow: hidden;
+    background: #fff;
+    margin-bottom: 10px;
+}
+
+.left-contact-col50{
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: 1fr 1fr; /* 2 equal columns */
+  gap: 20px; /* space between columns */
+  background-color:burlywood;
+  padding-top: 2rem;
+  padding-left: 1rem;
+  
+  
+}
+
+.right-contact-col50{
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  grid-template-columns: 1fr 1fr; /* 2 equal columns */
+  gap: 10px; /* space between columns */
+  margin-left: 50px;
+  margin-right: 20px;
 
 }
 
- footer{
+.contact-header {
+ display: flex;
+ flex-direction: column;
+ margin-top: 2rem;
+ 
+}
+
+/* LEFT PANEL */
+.contact-info-panel {
+    background: #16c79a;
+    color: white;
+    padding: 1rem;
+
+}
+
+.contact-info-panel h2 {
+    margin-bottom: 1rem;
+}
+
+.contact-item {
+  display:flex;
+  flex-direction: row;
+  height:5rem;
+  margin-left: 1.0rem ;
+}
+
+.contact-item i {
+    font-size: 0.9rem;
+}
+
+/* RIGHT FORM */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: burlywood;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.icon-circle {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: 2px solid rgba(255, 255, 255, 0.7); /* ring color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1rem;
+}
+
+.icon-circle i {
+    font-size: 1.rem;
+    color: #fff; /* icon color */
+    cursor: pointer;
+
+    
+}
+
+/* RESPONSIVE */
+@media (max-width: 768px) {
+
+  .contact-wrapper {
+    display: flex;
+    flex-direction: column;
+    position:relative;
+    padding:20px, 20px;
+    overflow: hidden;
+    background: #fff;
+    margin-bottom: 10px;
+}
+
+}
+
+ .footer{
 
 font-size: small;
 
