--- a/stylesheet.css
+++ b/stylesheet.css
@@ -520,19 +520,23 @@ color: var(--primary-color);
 }
 
 .view-more-btn {
-  display: block;
-  margin: 2rem auto;  
-  padding: 0.75rem 1.5rem;
-  background-color: var(--accent-color);
-  color: var(--text-color);
-  cursor: pointer;
-  font-size: 1rem;
+    display: block;
+    padding: 0.7rem 1.4rem;
+    background-color: #7A5C38;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: 500;
+    transition: 0.3s;
+    align-self: center;
+    
   
 }
 
 .view-more-btn:hover {
   border: 2px solid #2979ff; /* thin blue border */
   cursor: pointer;
+  background-color: #5c4329;
 }
 
 
@@ -1018,5 +1022,19 @@ font-size: small;
 @keyframes fadeIn {
   from { opacity: 0; transform: scale(0.95); }
   to   { opacity: 1; transform: scale(1); }
+}
+
+.send-btn{
+   background-color: burlywood;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.send-btn:hover{
+    background-color: #45a049;
+
 }
 
